--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+@import './buttons.css';
+@import './buttons-icon.css';
+@import './header.css';
+
 :root {
   --fontBase: 'Poppins', sans-serif;
   --headline1: bold 95px/153 var(--fontbase);
@@ -11,17 +15,13 @@
   --caption: 12px/19.42px var(--fontBase);
   --purple: #310a90;
   --green: #42e2b8;
+  --white: white;
   --gradient: radial-gradient(
       41.48% 11.48% at 2.38% 8.52%,
       #747de9 0%,
       rgba(255, 255, 255, 0) 100%
     ),
     linear-gradient(135deg, #72edf2 0%, #5151e5 100%);
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
 }
 
 body {
