--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
       #747de9 0%,
       rgba(255, 255, 255, 0) 100%
     ),
-    linear-gradient(135deg, #72edf2 0%, #5151e5 100%);
+    linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);
 }
 
 body {
