Wrap all content

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @import './buttons-icon.css';
 @import './header.css';
 @import './hero.css';
+@import './wrapper.css';
 
 :root {
   --fontBase: 'Poppins', sans-serif;
