--- a/css/hero.css
+++ b/css/hero.css
@@ -25,3 +25,28 @@
 .hero h1 {
   font: var(--headline3);
 }
+
+@media screen and (min-width: 768px) {
+  .hero {
+    display: flex;
+    gap: 32px;
+  }
+
+  .hero-description {
+    order: 1;
+    max-inline-size: 500px;
+  }
+
+  .hero-image {
+    order: 2;
+    text-align: end;
+    flex: 1;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero-image img {
+    inline-size: 500px;
+    block-size: 504px;
+  }
+}
