--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   block-size: 80px;
   position: sticky;
