--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 @import './hero.css';
 @import './wrapper.css';
 @import './menu.css';
+@import './projects.css';
 
 :root {
   --fontBase: 'Poppins', sans-serif;
