--- a/css/buttons-icon.css
+++ b/css/buttons-icon.css
@@ -1,6 +1,6 @@
 .button-icon {
   padding: 10px;
-  border: 2px solid var(--purple);
+  border: 2px solid var(--yellow);
   border-radius: 4px;
   background: var(--white);
   display: inline-block;
