--- a/css/projects.css
+++ b/css/projects.css
@@ -14,6 +14,7 @@
 
 .projects-welcome h5 {
   font: var(--headline5);
+  color: var(--yellow);
 }
 
 .projects-welcome img {
@@ -30,5 +31,6 @@
   .projects-welcome p {
     font-size: 34px;
     line-height: 55px;
+    max-inline-size: 900px;
   }
 }
