--- a/css/testimony.css
+++ b/css/testimony.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  text-align: center;
   align-items: center;
   justify-content: center;
   padding: 24px;
@@ -40,4 +41,30 @@
 .testimony-comment span {
   text-transform: uppercase;
   font: var(--caption);
+}
+
+@media screen and (min-width: 768px) {
+  .testimony {
+    padding-block-start: 80px;
+    padding-block-end: 80px;
+  }
+
+  .testimony-comment {
+    padding: 80px;
+  }
+
+  .testimony-comment p {
+    font-size: 34px;
+    line-height: 55px;
+  }
+
+  .testimony-comment img {
+    block-size: 80px;
+    inline-size: 80px;
+  }
+
+  .testimony-comment span {
+    font: var(--headline5);
+    opacity: 0.5;
+  }
 }
