--- a/css/hero.css
+++ b/css/hero.css
@@ -12,6 +12,11 @@
   text-align: center;
 }
 
+.hero-image img {
+  max-inline-size: 100%;
+  block-size: auto;
+}
+
 .hero-social {
   padding-block-end: 24px;
 }
