--- a/css/buttons.css
+++ b/css/buttons.css
@@ -20,6 +20,6 @@
 
 .button.is-secondary {
   background: unset;
-  color: var(--purple);
-  border: 2px solid var(--purple);
+  color: var(--primary);
+  border: 2px solid var(--primary);
 }
