--- a/css/testimony.css
+++ b/css/testimony.css
@@ -1,3 +1,51 @@
 .testimony {
-  border: 1px solid red;
+  padding-block-start: 40px;
+  padding-block-end: 40px;
+}
+
+.testimony-description {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  color: var(--primary);
+}
+
+.testimony-image img {
+  max-inline-size: 100%;
+}
+
+.testimony-title {
+  align-self: start;
+  background: var(--primary);
+  color: var(--white);
+  font: var(--headline5);
+  text-decoration: none;
+  /* margin-inline-start: 4px; */
+  padding-block-start: 4px;
+  padding-block-end: 4px;
+  padding-inline-start: 8px;
+  padding-inline-end: 8px;
+  box-shadow: -4px 4px 0 var(--white);
+}
+
+@media screen and (min-width: 768px) {
+  .testimony {
+    display: flex;
+    align-items: center;
+    padding-block-start: 80px;
+    padding-block-end: 80px;
+  }
+
+  .testimony-description {
+    flex: 1;
+  }
+
+  .testimony-image {
+    flex: 1;
+    text-align: center;
+  }
+
+  .testimony:nth-of-type(odd) .testimony-image {
+    order: 2;
+  }
 }
