Add footer styles for mobile and desktop

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 @import './testimony.css';
 @import './message.css';
 @import './social.css';
+@import './footer.css';
 
 :root {
   --fontBase: 'Poppins', sans-serif;
