--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@
 @import './social.css';
 @import './footer.css';
 @import './form.css';
+@import './title.css';
 
 :root {
   --fontBase: 'Poppins', sans-serif;
