Margin collapse betweent form and footer component

--- a/css/form.css
+++ b/css/form.css
@@ -1,18 +1,28 @@
-.form-contact {
+.form {
+  margin-block-end: 80px;
+}
+
+.form-content {
   display: flex;
   flex-direction: column;
   gap: 16px;
   color: var(--primary);
+  max-inline-size: 540px;
+  margin: auto;
 }
 
-.form-contact label {
+.form-content p {
+  text-align: center;
+}
+
+.form-content label {
   display: flex;
   flex-direction: column;
   font: var(--button);
 }
 
-.form-contact textarea,
-.form-contact input {
+.form-content textarea,
+.form-content input {
   border-radius: 8px;
   border: 1px solid var(--gray);
   padding-block-start: 12px;
@@ -21,4 +31,11 @@
   padding-inline-start: 16px;
   font: var(--body1);
   margin-block-start: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .form-content .title {
+    align-self: stretch;
+    text-align: center;
+  }
 }
