--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,13 @@
 .header {
+  position: sticky;
+  top: 0;
+  backdrop-filter: blur(10px);
+  z-index: 1;
+}
+
+.header-content {
   display: flex;
   justify-content: space-around;
   align-items: center;
   block-size: 80px;
-  position: sticky;
-  top: 0;
-  backdrop-filter: blur(10px);
 }
