--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 @import './wrapper.css';
 @import './menu.css';
 @import './projects.css';
-@import './testimony.css';
+@import './project.css';
 @import './message.css';
 @import './social.css';
 @import './footer.css';
@@ -35,7 +35,7 @@
       #747de9 0%,
       rgba(255, 255, 255, 0) 100%
     ),
-    linear-gradient(to top, var(--white) 0%, #ffd89b 50%, #00416a 100%);
+    linear-gradient(to top, var(--primary) 0%, #ffd89b 50%, #00416a 100%);
 }
 
 body {
