--- a/css/project.css
+++ b/css/project.css
@@ -1,37 +1,48 @@
-.testimony {
+.project {
   padding-block-start: 40px;
   padding-block-end: 40px;
 }
 
-.testimony-description {
+.project-description {
   display: flex;
   flex-direction: column;
   gap: 16px;
   color: var(--primary);
 }
 
-.testimony-image img {
+.project-image img {
   max-inline-size: 100%;
 }
 
+.project-actions {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 @media screen and (min-width: 768px) {
-  .testimony {
+  .project {
     display: flex;
     align-items: center;
+    gap: 38px;
     padding-block-start: 80px;
     padding-block-end: 80px;
   }
 
-  .testimony-description {
+  .project-description {
     flex: 1;
   }
 
-  .testimony-image {
+  .project-image {
     flex: 1;
     text-align: center;
   }
 
-  .testimony:nth-of-type(odd) .testimony-image {
+  .project:nth-of-type(odd) .project-image {
     order: 2;
+  }
+
+  .project-actions {
+    flex-direction: row;
   }
 }
